LATEST
v8 (in progress)
-Chests that were not properly randomized in AC mode fixed: 
--Tracy's room
--Bracer of kings room
--Cold remedy room (Giant Step)
--Bag of dragonite room (Pyramid)
--Magicant red area

KNOWN ISSUES
-The Lost World "geyser softlock". I'm not sure what caused this.
-More instances of an equippable item than can be used can be generated.
-Possible bug with dying at Giygas.

OLDER
v7
-Sanctuary Boss rooms in AC now always go front-to-back as they do in the base game.
-Non-Euclidian room layouts at Electro Specter no longer happen.
-Spoiler site at http://eb.compnode.net/ now displays chest locations and contents.
-Spoiler site at http://eb.compnode.net/ now displays boss locations and enemies.
-Odd-shaped PCs no longer appear in PC Sprite randomization by default due to graphical glitches.
-Use the code 'funsize' in your flags to get the odd-shaped PCs back.

v6
-Program now outputs a spoiler file in AC mode.
-Use this file at http://eb.compnode.net/ to view a map of doors and destinations. (More features coming soon.)

v5
-"Help" on ATM Card displays randomizer version info, seed, flags chosen.
-Mom's state set to heal you as normal.
-Phone in Ness's house no longer removes existing phone numbers.
-Non-gift-box NPCs no longer receive gift-box sprites.
-Chaos Theater show skipped if 'a' and 'p' flags selected due to panning bug.

v4
-Topolla Theater routing bug fixed.

v3
-NPC Sprite Swap and PC Sprite Swap flags added.
-Run button optional patch added.
-Enemy PP removed from intershuffle (fewer enemies will have no PP for their PP attacks).

v2
-Battle backgrounds randomized.
-Enemy battle sprite pallettes randomized.
-Hotels fixed.
-Phones in Winters locations enabled.
-Belch removed from Sanctuary Spot boss possibilities.

v1
-Praying at Giygas no longer softlocks.
-Exit Mice are now functional. They will take you back to the most recent Sanctuary Spot you visited, or home if you have not visited any.
-Sanctuary Spots are working now.