@@ -1,5 +1,8 @@
 LATEST
 v8 (in progress)
+-Chests in non-AC mode have a 20% chance to have any non-key item.
+-Use the code 'wildgifts' in your flags to make that chance 100%.
+-Money chests in non-AC mode randomize to (low-cost) items.
 -Chests that were not properly randomized in AC mode fixed: 
 --Tracy's room
 --Bracer of kings room
